# hyprlayer-cli

./: Cargo.toml  LICENSE  PKGBUILD-bin  README.md  build.rs  install.ps1  install.sh
.github/workflows/: release.yml
claude/agents/: adversarial-reviewer.md  codebase-locator.md  jira-searcher.md  jira-ticket-reader.md  thoughts-analyzer.md  thoughts-locator.md
claude/commands/: ci_describe_pr.md  commit.md  cost_estimate.md  create_handoff.md  create_plan.md  create_plan_generic.md  create_plan_nt.md  describe_pr.md  founder_mode.md  implement_plan.md  iterate_plan.md  iterate_plan_nt.md  local_review.md  research_codebase.md  research_codebase_generic.md  research_codebase_nt.md  resume_handoff.md  validate_plan.md
copilot/agents/: adversarial-reviewer.agent.md  codebase-analyzer.agent.md  codebase-locator.agent.md  codebase-pattern-finder.agent.md  jira-searcher.agent.md  jira-ticket-reader.agent.md  thoughts-analyzer.agent.md  thoughts-locator.agent.md  web-search-researcher.agent.md
copilot/prompts/: ci_commit.prompt.md  ci_describe_pr.prompt.md  code_review.prompt.md  commit.prompt.md  cost_estimate.prompt.md  create_handoff.prompt.md  create_plan.prompt.md  create_plan_generic.prompt.md  create_plan_nt.prompt.md  debug.prompt.md  describe_pr.prompt.md  describe_pr_nt.prompt.md  founder_mode.prompt.md  implement_plan.prompt.md  iterate_plan.prompt.md  (+7 more)
src/: agents.rs  config.rs  git_ops.rs  hooks.rs  main.rs  modules.rs  version.rs
winget/: BrightBlock.Hyprlayer.installer.yaml  BrightBlock.Hyprlayer.locale.en-US.yaml  BrightBlock.Hyprlayer.yaml
(+98 files in other folders)
