[package]
name = "hyprlayer"

version = "1.3.7"
edition = "2024"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
git2 = { version = "0.19", features = ["vendored-openssl"] }
dirs = "5.0"
anyhow = "1.0"
colored = "2.1"
dialoguer = "0.11"
shellexpand = "3.0"
chrono-humanize = "0.1"
chrono = "0.4"

